crates/quiver/tests/compile_fail/no_static_schema.stderr
error[E0599]: no function or associated item named `max_schema` found for struct `Thing` in the current scope
  --> tests/compile_fail/no_static_schema.rs:12:20
   |
 7 | struct Thing {
   | ------------ function or associated item `max_schema` not found for this struct
...
12 |     let _ = Thing::max_schema();
   |                    ^^^^^^^^^^ function or associated item not found in `Thing`
   |
note: if you're trying to build a new `Thing`, consider using `Thing::from_record_batch` which returns `Result<Thing, quiver::Error>`
  --> tests/compile_fail/no_static_schema.rs:6:10
   |
 6 | #[derive(quiver::Quiver)]
   |          ^^^^^^^^^^^^^^
   = note: this error originates in the derive macro `quiver::Quiver` (in Nightly builds, run with -Z macro-backtrace for more info)
